--- a/assets/scss/_typography.scss
+++ b/assets/scss/_typography.scss
@@ -19,6 +19,14 @@ h3 {
   margin-left: 0px;
 }
 
+a {
+  color: $yellow;
+  &:hover {
+    text-decoration:none;
+    color: $dark-yellow;
+  }
+}
+
 p, a, li {
   font-family: 'Roboto', sans-serif;
   font-size: 18px;
